css/style.css
.btn {
    width: 100px;
}

#timerBar {
    transition: none !important;
}

#gameRow, #game, #ultCard {
    height: 150px;
}

#startButton {
    font-size: 50px;
}

body {
    background-color: #434c5e;
}

.card {
    background-color: #434c5e;
}

.card-body {
    border-radius: 20%;
}

h1, h5, .card-title, button, #title {
    color: #eceff4 !important;
}

.btn-primary {
    background-color: #81a1c1 !important;
    border-color: #81a1c1 !important;
}

.btn-danger {
    background-color: #bf616a !important;
    border-color: #bf616a !important;
}

.btn-success {
    background-color: #a3be8c !important;
    border-color: #a3be8c !important;
}

.btn-info {
    background-color: #5e81ac !important;
    border-color: #5e81ac !important;
}

.btn-primary:hover {
    background-color: #6d8dad !important;
    border-color: #6d8dad !important;
}

.btn-danger:hover {
    background-color: #ab4d56 !important;
    border-color: #ab4d56 !important;
}

.btn-success:hover {
    background-color: #8faa78 !important;
    border-color: #8faa78 !important;
}

.btn-info:hover {
    background-color: #4a6d98 !important;
    border-color: #4a6d98 !important;
}

.progress-bar {
    background-color: #5e81ac;
}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48
}

.modal-content {
    background-color: #eceff4;
}

.modal-title, .modal-body {
    color: #2e3440 !important;
}

.modal-body > p {
    font-size: large;
}

.btn-chosen {
    background-color: #000000 !important;
    border-color: #000000 !important;
}

#discordName {
    color: white;
}

#discordIcon {
    color: white;
}

#ultImage {
    max-width: 64px;
    width: 100%;
}

.circle {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: 1px solid;
    background-color: #000000;
    opacity: 0.3;
    display: inline-block;
}

